--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 Flask==3.0.0
 gunicorn==21.2.0
+
+# Azure ML dependencies
+azure-ai-ml==1.12.0
+azure-identity==1.15.0
+scikit-learn==1.3.2
+pandas==2.1.4
+numpy==1.26.2
+joblib==1.3.2
